--- a/index.html
+++ b/index.html
@@ -3,9 +3,88 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./style.css">
     <title>TechWave</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <img src="./assets/TechWave.png" alt="">
+            <ul class="menu-bar">
+                <li><a href="">About</a></li>
+                <li><a href="">Episodes</a></li>
+                <li><a href="">Host</a></li>
+            </ul>
+            <button>Subscribe <img src="./assets/r_arrow.png" alt=""></button>
+        </nav>
+    </header>
+    <main>
+        <section class="about-us">
+            <div class="au-para">
+                <h2>About The Podcast</h2>
+                <p>TechWave is your go-to podcast for staying ahead in the fast-paced world of technology. <br><br>
+                We break down complex topics into digestible insights, explore productivity strategies that actually work, <br><br>
+                and share stories of personal growth from industry leaders.
+                </p>
+
+                <p>Join thousands of young professionals and tech enthusiasts who start their day with TechWave.
+                </p>
+            </div>
+            <hr>
+            <div id="note">
+                <div class="note">
+                    <h2>150K+</h2>
+                    <p>MONTHLY LISTENERS</p>
+                </div>
+                <div class="note">
+                    <h2>200+</h2>
+                    <p>EPISODES PUBLISHED</p>
+                </div>
+                <div class="note">
+                    <h2>4.9★</h2>
+                    <p>AVERAGE RATING</p>
+                </div>
+                <div class="note">
+                    <h2>50+</h2>
+                    <p>INDUSTRY EXPERTS</p>
+                </div>
+
+            </div>
+
+        </section>
+        <section class="why-choose-techwave">
+            <h2>Why Choose TechWave</h2>
+            <div class="cards">
+                <div class="card">
+                    <img src="./assets/headphone.png" alt="">
+                    <h5>Premium Audio Quality</h5>
+                    <p>Experience crystal-clear sound with professional-grade recording equipment and expert audio engineering. Every episode is mastered for optimal listening across all devices and platforms.</p>
+                </div>
+                <div class="card">
+                    <img src="./assets/device.png" alt="">
+                    <h5>Mobile Friendly</h5>
+                    <p>Listen on the go with seamless mobile experience and offline downloads.</p>
+                </div>
+                <div class="card">
+                    <img src="./assets/location.png" alt="">
+                    <h5>Global Community</h5>
+                    <p>Connect with tech enthusiasts from over 120 countries worldwide.</p>
+                </div>
+                <div class="card">
+                    <img src="./assets/Icon (Stroke).png" alt="">
+                    <h5>Exclusive Interviews</h5>
+                    <p>Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host secures exclusive conversations you won't find anywhere else, diving deep into their journeys, failures, and success strategies.</p>
+                </div>
+                <div class="card">
+                    <img src="./assets/resource.png" alt="">
+                    <h5>Rich Resources</h5>
+                    <p>Access show notes, transcripts, and additional learning materials for every episode.</p>
+                </div>
+            </div>
+        </section>        
+    </main>
 </body>
 </html>
