--- a/index.html
+++ b/index.html
@@ -58,29 +58,29 @@
         <section class="why-choose-techwave">
             <h2>Why Choose TechWave</h2>
             <div class="cards">
-                <div class="card">
+                <div class="card1 style">
                     <img src="./assets/headphone.png" alt="">
-                    <h5>Premium Audio Quality</h5>
+                    <h3>Premium Audio Quality</h3>
                     <p>Experience crystal-clear sound with professional-grade recording equipment and expert audio engineering. Every episode is mastered for optimal listening across all devices and platforms.</p>
                 </div>
-                <div class="card">
+                <div class="card2 style">
                     <img src="./assets/device.png" alt="">
-                    <h5>Mobile Friendly</h5>
+                    <h3>Mobile Friendly</h3>
                     <p>Listen on the go with seamless mobile experience and offline downloads.</p>
                 </div>
-                <div class="card">
+                <div class="card3 style">
                     <img src="./assets/location.png" alt="">
-                    <h5>Global Community</h5>
+                    <h3>Global Community</h3>
                     <p>Connect with tech enthusiasts from over 120 countries worldwide.</p>
                 </div>
-                <div class="card">
+                <div class="card4 style">
                     <img src="./assets/Icon (Stroke).png" alt="">
-                    <h5>Exclusive Interviews</h5>
+                    <h3>Exclusive Interviews</h3>
                     <p>Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host secures exclusive conversations you won't find anywhere else, diving deep into their journeys, failures, and success strategies.</p>
                 </div>
-                <div class="card">
+                <div class="card5 style">
                     <img src="./assets/resource.png" alt="">
-                    <h5>Rich Resources</h5>
+                    <h3>Rich Resources</h3>
                     <p>Access show notes, transcripts, and additional learning materials for every episode.</p>
                 </div>
             </div>
