added section three section

--- a/index.html
+++ b/index.html
@@ -84,7 +84,56 @@
                     <p>Access show notes, transcripts, and additional learning materials for every episode.</p>
                 </div>
             </div>
-        </section>        
+        </section>
+        
+        <section class="three">
+            <div>
+                <h2>Featured Episodes</h2>
+                <div class="v-cards">
+                    <div class="v-card">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/sMbDwjAcSV0?si=Nafy5iEPSEjKGQZE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            <div class="context">
+                            <h5>The Future of AI in Everyday Life</h5>
+                            <p>Exploring how artificial intelligence is transforming our daily routines and what to expect in the next decade.</p>
+                            <p><img src="./assets/clock.png" alt=""> 18 min</p>
+                        </div>
+                    </div>
+                    <div class="v-card">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/OrHpfTGmsXc?si=sbxgHC0yzFB9rAUp" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <div class="context">
+                            <h5>Building Better Habits for Remote Work</h5>
+                            <p>Practical strategies for staying productive and maintaining work-life balance in a remote environment.</p>
+                            <p><img src="./assets/clock.png" alt=""> 06 min</p>
+                        </div>
+                    </div>
+                    <div class="v-card">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/8gSPNWVYxWE?si=2xpnhBPnI0-L3Gq8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <div class="context">
+                            <h5>Career Growth in Tech: A Roadmap</h5>
+                            <p>Expert advice on navigating your tech career from junior developer to senior leadership roles.</p>
+                            <p><img src="./assets/clock.png" alt=""> 13 min</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="host">
+                <h2>Meet the Host</h2>
+                <div class="host-section">
+                    <img src="./assets/host.png" alt="">
+                    <div class="about-host">
+                        <h3>Alex Kumar</h3>
+                        <p>Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years, working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech.</p>
+                        <div class="social">
+                            <img src="./assets/linkedin.png" alt="">
+                            <img src="./assets/x.png" alt="">
+                            <img src="./assets/instagram.png" alt="">
+                            <img src="./assets/youtube.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
     </main>
 </body>
 </html>
