--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </section>
         
         <section class="three">
-            <div>
+            <div class="three-container">
                 <h2>Featured Episodes</h2>
                 <div class="v-cards">
                     <div class="v-card">
