--- a/index.html
+++ b/index.html
@@ -135,5 +135,29 @@
 
         </section>
     </main>
+    <footer>
+        <div class="footer">
+            <img src="./assets/TechWave_footer.png" alt="">
+            <div class="social-footer">
+                <div class="social-footer-card">
+                    <img src="./assets/spotify.png" alt="">
+                    <p>Spotify</p>
+                </div>
+                <div class="social-footer-card">
+                    <img src="./assets/apple-podcast.png" alt="">
+                    <p>Apple Podcast</p>
+                </div>
+                <div class="social-footer-card">
+                    <img src="./assets/youtube-podcast.png" alt="">
+                    <p>YouTube</p>
+                </div>
+                <div class="social-footer-card">
+                    <img src="./assets/twitter.png" alt="">
+                    <p>Twitter</p>
+                </div>
+            </div>
+            <p>© 2026 TechWave Podcast. All rights reserved.</p>
+        </div>
+    </footer>
 </body>
 </html>
