addded mobile nav

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
             </ul>
             <button>Subscribe <img src="./assets/r_arrow.png" alt=""></button>
         </nav>
+        <nav class="mobile-nav">
+            <img src="./assets/TechWave.png" alt="">
+            <img src="./assets/hamburger-menu.png" alt="">
+        </nav>
     </header>
     <main>
         <section class="about-us">
