--- a/index.html
+++ b/index.html
@@ -18,12 +18,32 @@
                 <li><a href="">Episodes</a></li>
                 <li><a href="">Host</a></li>
             </ul>
-            <button>Subscribe <img src="./assets/r_arrow.png" alt=""></button>
+            <button class="subscribe">Subscribe <img src="./assets/r_arrow.png" alt=""></button>
+            <button class="hamburger-btn" id="hamburger" aria-label="Open menu" aria-expanded="false"><img src="./assets/hamburger-menu.png" alt=""></button>
         </nav>
-        <nav class="mobile-nav">
-            <img src="./assets/TechWave.png" alt="">
-            <img src="./assets/hamburger-menu.png" alt="">
-        </nav>
+
+        <section class="hero">
+            <div class="hero-block">
+                <div class="hero-visual">
+                    <div class="back">
+                        <img src="./assets/hero-circle.png" alt="">
+                    </div>
+                    <div class="front">
+                        <img src="./assets/microphone.png" alt="">
+                    </div>
+                    <div class="popup">
+                        <img src="./assets/Frame 2087326323.png" alt="">
+                    </div>
+                </div>
+                <h1>TechWave</h1>
+                <p>Your daily dose of tech insights, productivity hacks, and personal growth</p>
+                <div class="btn">
+                    <button class="btn1"><img src="./assets/spotify.png" alt="">  Listen On Spotify</button>
+                    <button class="btn2"><img src="./assets/message.png" alt=""> Subscribe</button>
+                </div>
+
+
+        </section>
     </header>
     <main>
         <section class="about-us">
