organised code for navbar

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <header>
+        <!-- nav -->
         <nav>
             <img src="./assets/TechWave.png" alt="">
             <ul class="menu-bar">
@@ -19,9 +20,9 @@
                 <li><a href="">Host</a></li>
             </ul>
             <button class="subscribe">Subscribe <img src="./assets/r_arrow.png" alt=""></button>
-            <button class="hamburger-btn" id="hamburger" aria-label="Open menu" aria-expanded="false"><img src="./assets/hamburger-menu.png" alt=""></button>
+            <button class="hamburger-btn"><img src="./assets/hamburger-menu.png" alt=""></button>
         </nav>
-
+        <!-- hero -->
         <section class="hero">
             <div class="hero-block">
                 <div class="hero-visual">
