--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
                     <button class="btn1"><img src="./assets/spotify.png" alt="">  Listen On Spotify</button>
                     <button class="btn2"><img src="./assets/message.png" alt=""> Subscribe</button>
                 </div>
-
-
+            </div>
         </section>
     </header>
     <main>
