fixed hero sectioc bg for mobile like figma

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>TechWave</title>
 </head>
 <body>
+    <!-- navbar + hero section -->
     <header>
         <!-- nav -->
         <nav>
@@ -45,6 +46,7 @@
             </div>
         </section>
     </header>
+    <!-- about us + why choose techwave + featured + host -->
     <main>
         <section class="about-us">
             <div class="au-para">
