fixed bugs for  about us section for desktop

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     </header>
     <!-- about us + why choose techwave + featured + host -->
     <main>
+        <!-- about us section -->
         <section class="about-us">
             <div class="au-para">
                 <h2>About The Podcast</h2>
@@ -55,7 +56,6 @@
                 We break down complex topics into digestible insights, explore productivity strategies that actually work, <br><br>
                 and share stories of personal growth from industry leaders.
                 </p>
-
                 <p>Join thousands of young professionals and tech enthusiasts who start their day with TechWave.
                 </p>
             </div>
