fixed bugs and cleaned up codes for why choose techwave section for mobile

--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
                     <h2>50+</h2>
                     <p>INDUSTRY EXPERTS</p>
                 </div>
-
             </div>
 
         </section>
+        <!-- why choose techwave -->
         <section class="why-choose-techwave">
             <h2>Why Choose TechWave</h2>
             <div class="cards">
