fixed bugs and cleaned up codes for section three

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 </div>
             </div>
         </section>
-        
+        <!-- section three (featured episodes & host) -->
         <section class="three">
             <div class="three-container">
                 <h2>Featured Episodes</h2>
@@ -161,6 +161,7 @@
 
         </section>
     </main>
+    <!-- footer -->
     <footer>
         <div class="footer">
             <img src="./assets/TechWave_footer.png" alt="">
